/*
 * Copyright 2025, TeamDev. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * https://www.apache.org/licenses/LICENSE-2.0
 *
 * Redistribution and use in source and/or binary forms, with or without
 * modification, must retain the above copyright notice and the following
 * disclaimer.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
 * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
 * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
 * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
 * OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
 * SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
 * LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
 * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
 * THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */
syntax = "proto3";

package spine.server.given.context.drawing;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package="io.spine.server.given.context.drawing.event";
option java_outer_classname = "EventsProto";
option java_multiple_files = true;

import "spine/server/given/context/drawing/objects.proto";

option (every_is).java_type = "LineEvent";

message LineAdded {
    option (is).java_type = "LineInitEvent";
    Line line = 1 [(required) = true];
}

message LineRemoved {
    option (is).java_type = "LineLifecycleEvent";
    Line line = 1 [(required) = true];
}

message LineMoved {
    option (is).java_type = "LineLocationEvent";
    Line line = 1 [(required) = true];
    Line.Location previous = 2 [(required) = true];
}

message LineStyleChanged {
    Line line = 1 [(required) = true];
    Pen previous = 2 [(required) = true];
}

message LineSelected {
    Line line = 1 [(required) = true];
}

message LineUnselected {
    Line line = 1 [(required) = true];
}
